kustomize/homer/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
  name: homer-ingressroute
  namespace: homer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kgb.birtdata.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: homer
          port: 8080
  tls:
    secretName: homer-tls
