kustomize/homer/traefik-config.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homer-ingressroute
  namespace: homer
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: homer
          port: 8080
